--- a/base/Makefile
+++ b/base/Makefile
@@ -1,4 +1,4 @@
-OBJS = log.o net.o packet.o udplink.o
+OBJS = log.o net.o packet.o udplink.o tcplink.o fde.o
 
 all: ${OBJS}
 	ar -cru librtc-base.a ${OBJS}
@@ -11,4 +11,10 @@ packet.o: packet.h packet.cpp
 	g++ -c packet.cpp
 udplink.o: udplink.h udplink.cpp
 	g++ -c udplink.cpp
-	
+tcplink.o: tcplink.h tcplink.cpp
+	g++ -c tcplink.cpp
+fde.o: fde.h fde.cpp
+	g++ -c fde.cpp
+
+clean:
+	rm -rf *.a *.o	
