--- a/server/Makefile
+++ b/server/Makefile
@@ -1,7 +1,7 @@
 OBJS = room.o server.o
 
 all: ${OBJS}
-	g++ rtc.cpp -o rtc -I .. ../base/librtc-base.a ../audio/librtc-audio.a ${OBJS}
+	g++ rtc.cpp -o rtc.exe -I .. ../base/librtc-base.a ../audio/librtc-audio.a ${OBJS}
 
 room.o: room.h room.cpp
 	g++ -c room.cpp -I ..
@@ -9,5 +9,4 @@ server.o: server.h server.cpp
 	g++ -c server.cpp -I ..
 
 clean:
-	rm -f rtc
-	rm -rf *.a *.o	
+	rm -rf *.a *.o *.exe
