--- a/base/Makefile
+++ b/base/Makefile
@@ -4,17 +4,17 @@ all: ${OBJS}
 	ar -cru librtc-base.a ${OBJS}
 
 log.o: log.h log.cpp
-	g++ -c log.cpp
+	g++ ${CFLAGS} -c log.cpp
 net.o: net.h net.cpp
-	g++ -c net.cpp
+	g++ ${CFLAGS} -c net.cpp
 packet.o: packet.h packet.cpp
-	g++ -c packet.cpp
+	g++ ${CFLAGS} -c packet.cpp
 udplink.o: udplink.h udplink.cpp
-	g++ -c udplink.cpp
+	g++ ${CFLAGS} -c udplink.cpp
 tcplink.o: tcplink.h tcplink.cpp
-	g++ -c tcplink.cpp
+	g++ ${CFLAGS} -c tcplink.cpp
 fde.o: fde.h fde.cpp
-	g++ -c fde.cpp
+	g++ ${CFLAGS} -c fde.cpp
 
 clean:
 	rm -rf *.a *.o	
