--- a/server/Makefile
+++ b/server/Makefile
@@ -1,12 +1,12 @@
 OBJS = room.o server.o
 
 all: ${OBJS}
-	g++ rtc.cpp -o rtc.exe -I .. ../base/librtc-base.a ../audio/librtc-audio.a ${OBJS}
+	g++ ${CFLAGS} rtc.cpp -o rtc.exe -I .. ../base/librtc-base.a ../audio/librtc-audio.a ${OBJS}
 
 room.o: room.h room.cpp
-	g++ -c room.cpp -I ..
+	g++ ${CFLAGS} -c room.cpp -I ..
 server.o: server.h server.cpp
-	g++ -c server.cpp -I ..
+	g++ ${CFLAGS} -c server.cpp -I ..
 
 clean:
 	rm -rf *.a *.o *.exe
