--- a/test/Makefile
+++ b/test/Makefile
@@ -6,7 +6,14 @@ all:
 		-L ../deps/sfml-2.0 -lsfml-audio -lsfml-system \
 		../deps/opus-1.0.3/libopus.a \
 		../base/librtc-base.a
-	#export DYLD_LIBRARY_PATH="../deps/sfml-2.0:../deps/sndfile.framework/Versions/A"
+	g++ music_player.cpp -o music_player.exe \
+		-I .. \
+		-I ../deps/sfml-2.0/include \
+		-I ../deps/opus-1.0.3/include \
+		-L ../deps/sfml-2.0 -lsfml-audio -lsfml-system \
+		../deps/opus-1.0.3/libopus.a \
+		../base/librtc-base.a
+	export DYLD_LIBRARY_PATH="../deps/sfml-2.0:../deps/sndfile.framework/Versions/A"
 
 clean:
 	rm -rf *.a *.o *.exe
