--- a/audio/Makefile
+++ b/audio/Makefile
@@ -3,9 +3,9 @@ OBJS = mixer.o channel.o
 all: ${OBJS}
 	ar -cru librtc-audio.a ${OBJS}
 
-channel.o: channel.h channel.cpp chunk.h
+channel.o: channel.h channel.cpp
 	g++ ${CFLAGS} -c channel.cpp -I ../
-mixer.o: mixer.h mixer.cpp chunk.h
+mixer.o: mixer.h mixer.cpp
 	g++ ${CFLAGS} -c mixer.cpp -I ../
 
 clean:
