--- a/test/Makefile
+++ b/test/Makefile
@@ -9,8 +9,6 @@ all:
 		$(LIBAVE_PATH)/lib/libave.a \
 		../deps/opus-1.0.3/libopus.a \
 		../base/librtc-base.a
-
-a:
 	g++ music_player.cpp -o music_player.exe \
 		-I .. \
 		-I ../deps/sfml-2.0/include \
@@ -18,7 +16,7 @@ a:
 		-L ../deps/sfml-2.0 -lsfml-audio -lsfml-system \
 		../deps/opus-1.0.3/libopus.a \
 		../base/librtc-base.a
-	export DYLD_LIBRARY_PATH="../deps/sfml-2.0:../deps/sndfile.framework/Versions/A"
+	export DYLD_LIBRARY_PATH="./deps/sfml-2.0:./deps/sndfile.framework/Versions/A"
 
 clean:
 	rm -rf *.a *.o *.exe
