--- a/test/Makefile
+++ b/test/Makefile
@@ -17,6 +17,7 @@ all:
 		../deps/opus-1.0.3/libopus.a \
 		../base/librtc-base.a
 	export DYLD_LIBRARY_PATH="./deps/sfml-2.0:./deps/sndfile.framework/Versions/A"
+	export DYLD_LIBRARY_PATH="../deps/sfml-2.0:../deps/sndfile.framework/Versions/A"
 
 clean:
 	rm -rf *.a *.o *.exe
