--- a/server/voice/Makefile
+++ b/server/voice/Makefile
@@ -1,7 +1,7 @@
 OBJS = mixer.o channel.o
 
 all: ${OBJS}
-	ar -cru librtc-audio.a ${OBJS}
+	ar -cru librtc-voice.a ${OBJS}
 
 channel.o: channel.h channel.cpp
 	g++ ${CFLAGS} -c channel.cpp -I ../../
