--- a/base/Makefile
+++ b/base/Makefile
@@ -1,20 +1,7 @@
-OBJS = log.o net.o packet.o udplink.o tcplink.o fde.o
+include $(ROOT)/config.mk
 
-all: ${OBJS}
-	ar -cru librtc-base.a ${OBJS}
+LOCAL_SRC_FILES = $(wildcard *.cpp)
 
-log.o: log.h log.cpp
-	g++ ${CFLAGS} -c log.cpp
-net.o: net.h net.cpp
-	g++ ${CFLAGS} -c net.cpp
-packet.o: packet.h packet.cpp
-	g++ ${CFLAGS} -c packet.cpp
-udplink.o: udplink.h udplink.cpp
-	g++ ${CFLAGS} -c udplink.cpp
-tcplink.o: tcplink.h tcplink.cpp
-	g++ ${CFLAGS} -c tcplink.cpp
-fde.o: fde.h fde.cpp
-	g++ ${CFLAGS} -c fde.cpp
-
-clean:
-	rm -rf *.a *.o	
+all:
+	$(CC) -c $(filter-out fde_%.cpp, $(LOCAL_SRC_FILES)) $(CFLAGS)
+	ar -cru librtc-base.a *.o
