--- a/test/Makefile
+++ b/test/Makefile
@@ -1,15 +1,17 @@
+include $(ROOT)/config.mk
 LIBAVE_PATH = ../../libave/dist
 
 all:
-	g++ av.cpp -o av.exe \
+	$(CC) av.cpp -o av.exe \
+		$(CFLAGS) \
 		-I .. \
+		-I ../client \
 		-I $(LIBAVE_PATH)/include \
-		-I ../deps/opus-1.0.3/include \
 		-framework ApplicationServices -framework AudioToolbox -framework CoreAudio \
 		$(LIBAVE_PATH)/lib/libave.a \
-		../deps/opus-1.0.3/libopus.a \
-		../base/librtc-base.a
-	g++ music_player.cpp -o music_player.exe \
+		../base/librtc-base.a \
+		../client/*.o
+	$(CC) music_player.cpp -o music_player.exe \
 		-I .. \
 		-I ../deps/sfml-2.0/include \
 		-I ../deps/opus-1.0.3/include \
@@ -19,5 +21,3 @@ all:
 	export DYLD_LIBRARY_PATH="./deps/sfml-2.0:./deps/sndfile.framework/Versions/A"
 	export DYLD_LIBRARY_PATH="../deps/sfml-2.0:../deps/sndfile.framework/Versions/A"
 
-clean:
-	rm -rf *.a *.o *.exe
