--- a/client/Makefile
+++ b/client/Makefile
@@ -1,5 +1,7 @@
 include $(ROOT)/config.mk
 
+LOCAL_SRC_FILES = $(wildcard *.cpp)
+
 all:
-	$(CC) -c *.cpp $(CFLAGS)
+	$(CC) -c $(LOCAL_SRC_FILES) $(CFLAGS)
 
