--- a/base/Makefile
+++ b/base/Makefile
@@ -4,4 +4,4 @@ LOCAL_SRC_FILES = $(wildcard *.cpp)
 
 all:
 	$(CC) -c $(filter-out fde_%.cpp, $(LOCAL_SRC_FILES)) $(CFLAGS)
-	ar -cru librtc-base.a *.o
+	ar -cru $(DIST_LIB_DIR)/librtc-base.a *.o
