--- a/test/Makefile
+++ b/test/Makefile
@@ -1,23 +1,20 @@
 include $(ROOT)/config.mk
-LIBAVE_PATH = ../../libave/dist
 
 all:
 	$(CC) av.cpp -o av.exe \
 		$(CFLAGS) \
-		-I .. \
-		-I ../client \
-		-I $(LIBAVE_PATH)/include \
+		-I $(DIST_INC_DIR) \
 		-framework ApplicationServices -framework AudioToolbox -framework CoreAudio \
-		$(LIBAVE_PATH)/lib/libave.a \
-		../base/librtc-base.a \
-		../client/*.o
+		$(DIST_LIB_DIR)/librtc-base.a $(DIST_LIB_DIR)/librtc-multimedia.a
+		
 	$(CC) music_player.cpp -o music_player.exe \
 		-I .. \
 		-I ../deps/sfml-2.0/include \
 		-I ../deps/opus-1.0.3/include \
 		-L ../deps/sfml-2.0 -lsfml-audio -lsfml-system \
 		../deps/opus-1.0.3/libopus.a \
-		../base/librtc-base.a
+		$(DIST_LIB_DIR)/librtc-base.a
+
 	export DYLD_LIBRARY_PATH="./deps/sfml-2.0:./deps/sndfile.framework/Versions/A"
 	export DYLD_LIBRARY_PATH="../deps/sfml-2.0:../deps/sndfile.framework/Versions/A"
 
