--- a/server/Makefile
+++ b/server/Makefile
@@ -1,7 +1,7 @@
 OBJS = room.o server.o
 
 all: ${OBJS}
-	g++ ${CFLAGS} rtc.cpp -o rtc.exe -I .. ../base/librtc-base.a voice/*.o ${OBJS}
+	g++ ${CFLAGS} rtc.cpp -o rtc.exe -I .. ../dist/lib/librtc-base.a voice/*.o ${OBJS}
 
 room.o: room.h room.cpp
 	g++ ${CFLAGS} -c room.cpp -I ..
