--- a/multimedia/Makefile
+++ b/multimedia/Makefile
@@ -4,8 +4,10 @@ include config.mk
 ROOT = $(shell pwd)
 
 all:
-	cd webrtc/modules/audio_device; make ROOT=$(ROOT)
 	cd webrtc/system_wrappers/source; make ROOT=$(ROOT)
+
+a:
+	cd webrtc/modules/audio_device; make ROOT=$(ROOT)
 	cd webrtc/common_audio/signal_processing; make ROOT=$(ROOT)
 	cd webrtc/common_audio/vad; make ROOT=$(ROOT)
 	cd webrtc/common_audio/resampler; make ROOT=$(ROOT)
@@ -15,6 +17,4 @@ all:
 	cd webrtc/modules/audio_processing/ns; make ROOT=$(ROOT)
 	cd audio; make ROOT=$(ROOT)
 	cp audio/audio_device.h $(DIST_INC_DIR)
-	ar -cru $(DIST_LIB_DIR)/librtc-multimedia.a $(DIST_OBJ_DIR)/*.o
-
-a:
+	$(AR) $(DIST_LIB_DIR)/librtc-multimedia.a $(DIST_OBJ_DIR)/*.$(OBJ)
