--- a/multimedia/webrtc/common_audio/resampler/Makefile
+++ b/multimedia/webrtc/common_audio/resampler/Makefile
@@ -1,6 +1,6 @@
 include $(ROOT)/config.mk
 
-LOCAL_MODULE := libwebrtc_resampler.a
+LOCAL_MODULE := libwebrtc_resampler
 LOCAL_SRC_FILES := \
 	resampler.cc
 
