--- a/multimedia/webrtc/modules/audio_processing/aecm/Makefile
+++ b/multimedia/webrtc/modules/audio_processing/aecm/Makefile
@@ -1,6 +1,6 @@
 include $(ROOT)/config.mk
 
-LOCAL_MODULE := libwebrtc_aecm.a
+LOCAL_MODULE := libwebrtc_aecm
 LOCAL_SRC_FILES := \
     echo_control_mobile.c \
     aecm_core.c
