--- a/multimedia/webrtc/modules/audio_processing/agc/Makefile
+++ b/multimedia/webrtc/modules/audio_processing/agc/Makefile
@@ -1,6 +1,6 @@
 include $(ROOT)/config.mk
 
-LOCAL_MODULE := libwebrtc_agc.a
+LOCAL_MODULE := libwebrtc_agc
 LOCAL_SRC_FILES := \
     analog_agc.c \
     digital_agc.c
