--- a/multimedia/webrtc/modules/audio_processing/utility/Makefile
+++ b/multimedia/webrtc/modules/audio_processing/utility/Makefile
@@ -1,6 +1,6 @@
 include $(ROOT)/config.mk
 
-LOCAL_MODULE := libwebrtc_apm_utility.a
+LOCAL_MODULE := libwebrtc_apm_utility
 LOCAL_SRC_FILES := \
     fft4g.c \
     ring_buffer.c \
