--- a/multimedia/Makefile
+++ b/multimedia/Makefile
@@ -1,12 +1,9 @@
-$(shell sh build.sh > config.mk)
-include config.mk
+#$(shell sh build.sh > config.mk)
+include ../config.mk
 
-ROOT = $(shell pwd)
 
 all:
 	cd webrtc/system_wrappers/source; make ROOT=$(ROOT)
-
-a:
 	cd webrtc/modules/audio_device; make ROOT=$(ROOT)
 	cd webrtc/common_audio/signal_processing; make ROOT=$(ROOT)
 	cd webrtc/common_audio/vad; make ROOT=$(ROOT)
@@ -17,4 +14,8 @@ a:
 	cd webrtc/modules/audio_processing/ns; make ROOT=$(ROOT)
 	cd audio; make ROOT=$(ROOT)
 	cp audio/audio_device.h $(DIST_INC_DIR)
-	$(AR) $(DIST_LIB_DIR)/librtc-multimedia.a $(DIST_OBJ_DIR)/*.$(OBJ)
+	$(AR) $(DIST_LIB_DIR)/librtc-multimedia.$(LIB) $(DIST_OBJ_DIR)/*.$(OBJ)
+	echo
+
+a:
+
