--- a/multimedia/webrtc/modules/audio_processing/ns/Makefile
+++ b/multimedia/webrtc/modules/audio_processing/ns/Makefile
@@ -1,6 +1,6 @@
 include $(ROOT)/config.mk
 
-LOCAL_MODULE := libwebrtc_ns.a
+LOCAL_MODULE := libwebrtc_ns
 LOCAL_SRC_FILES := \
     noise_suppression_x.c \
     nsx_core.c
